#46 design : footer iconSection align fix

--- a/src/app/components/@shared/footer/Footer.module.scss
+++ b/src/app/components/@shared/footer/Footer.module.scss
@@ -39,6 +39,7 @@
 
 .footerMiddleSection {
   display: flex;
+  align-items: center;
   gap: 30px;
 }
 
